[package]
name = "bd_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rconn = "0.3"
imlogger = "0.1"
sha2 = "0.10"
aes-gcm = "0.10"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.20"
hex = "0.4"
rand = "0.8"
